syntax = "proto3";

package torrent_p2p;

// Common message wrapper for all gossip types
message GossipMessage {
  // Metadata for all messages
  string message_id = 1;
  uint64 timestamp = 2;
  string source_ip = 3;
  uint32 source_port = 4;
  uint64 lamport_timestamp = 5;

  // Different message types
  oneof message_type {
    ReputationMessage reputation = 10;
    HeartbeatMessage heartbeat = 11;
    // Add more message types here as needed
  }
}

// Reputation message
message ReputationMessage {
  string subject_ip = 1;
  uint32 subject_port = 2;
  int32 reputation = 3;
}

//Bootstrap Heartbeat Message
message HeartbeatMessage {
    enum Type {
        PING = 0;
        PONG = 1;
    }
    Type type = 1;
    int64 timestamp = 2;
}